<resources>
    <string name="app_name">AdherenceApp</string>
    <string name="img_dsc">image description</string>
    <string name="message_desc">enter your phone number below to get sms for registration</string>
    <string name="send_sms">Send Me SMS</string>
    <string name="phone_number">Phone Number</string>
    <string name="have_account">Have an account?</string>
    <string name="login">Log In</string>
    <string name="submitting">Submitting</string>
    <string name="submit">Submit</string>
    <string name="required">required</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="dn_receive_code">Didn\'t receive a code?</string>
    <string name="resend_in">Resend in</string>
    <string name="sec_count">%d seconds</string>
    <string name="code_on_sms">enter verification code received on sms</string>
    <string name="resend">Resend</string>
    <string name="invalid_code">Invalid Verification Code</string>
    <string name="network_error">Network Error. Please try again.</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="enter_phone">Please enter your phone number</string>
    <string name="empty_access_key">Please enter access key</string>
    <string name="enter_code">Please enter your Verification Code</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="next">next</string>
    <string name="tutorial_1_text">Keep your hospital appointments organized and quickly check your drug reminders
        with the Adherence App
    </string>
    <string name="tutorial_2_text">Get notified when it\'s time to take medicine or when it is time to visit the
        hospital for an appointment
    </string>
    <string name="tutorial_3_text">You can decide to snooze the alarm or cancel it if need there be</string>
    <string name="done">done</string>
    <string name="adherence">Adherence</string>
    <string name="sch_app">scheduling app</string>
    <string name="login_dsc">enter your access key below to login</string>
    <string name="login_dsc_phone">enter your phone number below to receive verification code</string>
    <string name="sign_in">Sign In</string>
    <string name="dnt_account">Don\'t have an account?</string>
    <string name="req_one">Request One</string>
    <string name="dnt_register">Your haven\'t register. Please register.</string>
    <string name="already_registered">Your had registered. Please login.</string>
    <string name="cont_client">Continue as Client</string>
    <string name="cont_chv">Continue as CHV</string>
    <string name="choose_act_type">Choose account type</string>
    <string name="good_morning">Good Morning!</string>
    <string name="good_afternoon">Good Afternoon!</string>
    <string name="good_evening">Good Evening!</string>
    <string name="good_morning_chv">Good Morning CHV!</string>
    <string name="good_afternoon_chv">Good Afternoon CHV!</string>
    <string name="good_evening_chv">Good Evening CHV!</string>
    <string name="ninety_nine_plus">99+</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="mon">Monday</string>
    <string name="tues">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thur">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="mon_short">Mon</string>
    <string name="tues_short">Tue</string>
    <string name="wed_short">Wed</string>
    <string name="thur_short">Thur</string>
    <string name="fri_short">Fri</string>
    <string name="sat_short">Sat</string>
    <string name="sun_short">Sun</string>
    <string name="upcoming_not">Upcoming Notifications</string>
    <string name="upcoming_alarm">Upcoming Alarms</string>
    <string name="sample_date">July 4, 2019</string>
    <string name="home">Home</string>
    <string name="missed_alarms">Missed Alarms</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="two">2</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="short_dsc">Short Description</string>
    <string name="short_dsc_chv">Short Description</string>
    <string name="all_day">All Day</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="location">Location</string>
    <string name="notification">Notification</string>
    <string name="alarm_tone">Alarm Tone</string>
    <string name="alarm_tone_1">Alarm Tone 1</string>
    <string name="alarm_tone_2">Alarm Tone 2</string>
    <string name="alarm_tone_3">Alarm Tone 3</string>
    <string name="custom">Custom</string>
    <string name="once">Once</string>
    <string name="daily">Daily</string>
    <string name="weekday">Weekday</string>
    <string name="repeat">Repeat</string>
    <string name="monthly">Monthly</string>
    <string name="sample_time">10:00 am</string>
    <string name="via_popup">via Popup</string>
    <string name="adhere">Adherence Beep</string>
    <string name="hospital">Hospital ABC</string>
    <string-array name="repeat_mode_array">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekday</item>
        <item>Custom</item>
    </string-array>
    <string-array name="notification_mode_array">
        <item>via Popup</item>
        <item>On Status Bar</item>
    </string-array>
    <string name="sel_tone">Select Alarm Tone</string>
    <string name="fill_fields">Please fill all fields.</string>
    <string name="alarm_add_success">Alarm added successfully</string>
    <string name="alarm_edit_success">Alarm edited successfully</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="port_florence">Eg. Port Florence Hospital</string>
    <string name="place">Place</string>
    <string name="ok">OK</string>
    <string name="sample_year">2019</string>
    <string name="no_alarm">No Upcoming Alarm.</string>
    <string name="no_client">You\'ve not added any client.</string>
    <string name="no_missed_alarm">No Missed Alarm.</string>
    <string name="user_adher">User Adher</string>
    <string name="new_adherence">New Adherence</string>
    <string name="notification_alt">Notification!</string>
    <string name="drug">Drug</string>
    <string name="drug_alt">drug %1$s</string>
    <string name="confirm_below">confirm below</string>
    <string name="taken">I\'ve Taken</string>
    <string name="taken_med">Taken</string>
    <string name="attended">I\'ve Attended</string>
    <string name="snooze">Snooze</string>
    <string name="remaining">(%1$d remaining)</string>
    <string name="med_type">Medication Type</string>
    <string name="enter_access_key">Enter Access Key Here</string>
    <string name="invalid_access_key">Invalid access key</string>
    <string name="access_key">Access Key</string>
    <string-array name="med_type_array">
        <item>Treatment</item>
        <item>ARV</item>
    </string-array>
    <string name="grant_perm">Please grant this app permission to read files in order to use custom alarm tones</string>
    <string name="grant_perm_file">Please grant this app permission to read files in order to upload photo.</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="alarm_cancel_success">Alarm Cancelled successfully.</string>
    <string name="undo">Undo</string>
    <string name="why_cancel">Why Have You Cancelled</string>
    <string name="reason_to_cancel">Reason To Cancel</string>
    <string name="congrats">Congratulations</string>
    <string name="points_awarded_label">Points Awarded:</string>
    <string name="total_points_label">Total Points:</string>
    <string name="point">%1$d point</string>
    <string name="points">%1$d points</string>
    <string name="close">close</string>
    <string name="dismiss">dismiss</string>
    <string name="snoozed_to">snoozed to</string>
    <string name="turn_off">turn off</string>
    <string name="reports">Reports</string>
    <string name="appointment">Appointment</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="client">Client</string>
    <string name="clients">Clients</string>
    <string name="add_client">Add Client</string>
    <string name="full_name">Full Name</string>
    <string name="client_add_success">Client Added Successfully</string>
    <string name="client_edit_success">Client Edited Successfully</string>
    <string name="client_exist">Client exists</string>
    <string name="sample_phone_no">0700123123</string>
    <string name="sample_name">Mary Susan</string>
    <string name="sample_location">Mlimani</string>
    <string name="delete">Delete</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="phone_no">0%1$s</string>
    <string name="deactivate_client">Deactivate Client</string>
    <string name="edit_client">Edit Client</string>
    <string name="deactivate_client_dsc">Do you want to deactivate this client?</string>
    <string name="client_deactivate_success">Client deactivated successfully</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="follow_up">Follow Up</string>
    <string name="hos">Hospital</string>
    <string name="after_now">Please choose date after now</string>
    <string name="at_least_one_hr">The difference between to and from date should be at least an hour</string>
    <string name="select_client">Select Client</string>
    <string name="choose_client">Choose Client…</string>
    <string name="no_appointment">You have no appointment with this client</string>
    <string name="appointments">Appointments</string>
    <string name="no_missed_medications">No Missed Medications</string>
    <string name="no_client_follow_up">No client marked for follow up</string>
    <string name="no_missed_medication">No client missed medication</string>
    <string name="missed_medications">Missed Medications</string>
    <string name="treatment">Treatment</string>
    <string name="arv">ARV</string>
    <string name="mark_for_follow_up">Mark for follow up</string>
    <string name="sample_name_short">Chris</string>
    <string name="mark_follow_up_success">Client marked for follow up successfully</string>
    <string name="missed_alarm">Missed Alarm</string>
    <string name="allow_auto_start_description">Please Allow this App to auto start, else the app won\'t function
        well.
    </string>
    <string name="allow">Allow</string>
    <string name="skip">Skip</string>
    <string name="proceed">Proceed</string>
</resources>