<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/colorPrimary"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:indeterminate="true"
                android:indeterminateDuration="1000"
                android:theme="@style/LinearProgress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:scaleY="3"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:padding="0dp"
                app:errorEnabled="true"
                app:helperTextEnabled="false"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/short_dsc_chv"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorWhiteSemitransparent"
                    android:text="@string/follow_up"
                    android:enabled="false"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhiteSemitransparent"
                    android:textSize="15sp"
                    android:fontFamily="@font/product_sans_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/date_and_time"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:id="@+id/tv_from_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/tv_from_time"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/sample_date"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/product_sans_regular"
                    android:textSize="15sp"
                    android:layout_marginEnd="20dp"
            />

            <TextView
                    android:id="@+id/tv_from_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/sample_time"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/product_sans_regular"
                    android:textSize="15sp"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <View
                android:id="@+id/drug_divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhiteSemitransparent"
                    android:textSize="15sp"
                    android:fontFamily="@font/product_sans_regular"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/client"/>

            <TextView
                    android:id="@+id/tv_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/choose_client"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/product_sans_regular"
                    android:textSize="15sp"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
                android:id="@+id/appointment_divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhiteSemitransparent"
                    android:textSize="15sp"
                    android:fontFamily="@font/product_sans_regular"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/alarm_tone"/>

            <TextView
                    android:id="@+id/tv_tone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/alarm_tone_1"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/product_sans_regular"
                    android:textSize="15sp"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>