<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:clickable="true"
            style="@style/SelectableItemBackground"
            android:focusable="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_count"/>

        <TextView
                android:id="@+id/tv_count"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/two"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/circular_bg_green_xs"
                android:textColor="@android:color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:clickable="true"
            style="@style/SelectableItemBackground"
            android:focusable="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_alarm"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="20sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_missed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:clickable="true"
            style="@style/SelectableItemBackground"
            android:focusable="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/missed_alarm"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="20sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:clickable="true"
            style="@style/SelectableItemBackground"
            android:focusable="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="20sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:clickable="true"
            style="@style/SelectableItemBackground"
            android:focusable="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="20sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:clickable="true"
            style="@style/SelectableItemBackground"
            android:focusable="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="20sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>
</LinearLayout>